@@ -136,6 +136,7 @@ Roger Bongers
 Ross Hadden (rosshadden)
 Ruslan Osmanov (rosmanov)
 Russell Urquhart
+r0ck
 SanLe
 santhoshr
 Sassan Haradji (sassanh)
